<resources>
    <string name="app_name">projetMTG</string>
    <string name="CardName">Name (optional)</string>
    <string name="CardType">Type (optional)</string>
    <string name="CardColor">Color (optional)</string>
    <string name="CardColorIdentity">Color Identity (optional)</string>

    <!--    CHECKBOX COLOR IDENTITY     -->

    <string name="CIW">W</string>
    <string name="CIU">U</string>
    <string name="CIB">B</string>
    <string name="CIR">R</string>
    <string name="CIG">G</string>

    <!--    CHECKBOX COLOR      -->

    <string name="CW">W</string>
    <string name="CU">U</string>
    <string name="CB">B</string>
    <string name="CR">R</string>
    <string name="CG">G</string>
    <string name="search_button">Search !</string>
    <string name="Name">TextView</string>
    <string name="Manacost">TextView</string>
    <string name="Types">TextView</string>
    <string name="Cmc">TextView</string>
    <string name="Text">TextView</string>
    <string name="ColorIdentity">TextView</string>
    <string name="Rarity">TextView</string>
    <string name="PowerToughness">TextView</string>
    <string name="textview">TextView</string>


    <string name="title_activity_show_card_info">ShowCardInfo</string>
    <string name="tab_text_1">Info</string>
    <string name="tab_text_2">image</string>
    <string name="tab_text_3">rulings</string>
    <string name="card_image">card image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Legalities">legal in : \n</string>
    <string name="illegalities">Non legal in all other formats</string>
    <string name="rullings">Special rulings</string>
    <string name="goFavorite">see favorites</string>
</resources>