<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/CardName"
        android:layout_width="346dp"
        android:layout_height="47dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/CardName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/CardType"
        android:layout_width="346dp"
        android:layout_height="47dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/CardType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="156dp"
        android:text="@string/CardColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextColorIdentity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="256dp"
        android:text="@string/CardColorIdentity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    CHECKBOX COLOR IDENTITY     -->

    <CheckBox
        android:id="@+id/CIW"
        android:layout_width="46dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="300dp"
        android:text="@string/CIW"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/CIU"
        android:layout_width="44dp"
        android:layout_height="35dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="300dp"
        android:text="@string/CIU"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/CIB"
        android:layout_width="44dp"
        android:layout_height="33dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="300dp"
        android:text="@string/CIB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/CIR"
        android:layout_width="43dp"
        android:layout_height="34dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="300dp"
        android:text="@string/CIR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/CIG"
        android:layout_width="43dp"
        android:layout_height="34dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="300dp"
        android:text="@string/CIG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    CHECKBOX COLOR      -->

    <CheckBox
        android:id="@+id/CW"
        android:layout_width="46dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="200dp"
        android:text="@string/CW"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/CU"
        android:layout_width="44dp"
        android:layout_height="35dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="200dp"
        android:text="@string/CU"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/CB"
        android:layout_width="44dp"
        android:layout_height="33dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="200dp"
        android:text="@string/CB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/CR"
        android:layout_width="43dp"
        android:layout_height="34dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="200dp"
        android:text="@string/CR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/CG"
        android:layout_width="43dp"
        android:layout_height="34dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="200dp"
        android:text="@string/CG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    Search Button       -->

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="428dp"
        android:text="@string/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>